--- a/wxDCS-Injector.csproj
+++ b/wxDCS-Injector.csproj
@@ -175,6 +175,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="README.md" />
     <None Include="Service\Schema\generate.bat" />
     <None Include="Service\Schema\metar1_2.xsd">
       <SubType>Designer</SubType>
